# ML_VK

./: .gitignore
.github/workflows/: ci.yml
ML/Lecture_1/: pandas.ipynb
АиСД/Seminar_1/: Технопарк. 2022. Весна. Первый модуль.docx
Углубленный C_C++/Homework_1/: CMakeLists.txt  file.txt  main.c  script  suppresions
Углубленный C_C++/Homework_1/.github/workflows/: ci.yml
Углубленный C_C++/Homework_1/funcs/: CMakeLists.txt
Углубленный C_C++/Homework_1/funcs/animal/: animal.c  animal.h
Углубленный C_C++/Homework_1/funcs/constants/: constants.h
Углубленный C_C++/Homework_1/funcs/fib/: fib.c
Углубленный C_C++/Homework_1/funcs/safe_input/: safe_input.c  safe_input.h
Углубленный C_C++/Homework_1/funcs/save_input/: save_input.c
Углубленный C_C++/Homework_1/linters/: run.sh
Углубленный C_C++/Homework_1/src/: main.c
Углубленный C_C++/Homework_1/src/constants/: constants.h
Углубленный C_C++/Homework_1/tests/: test_funcs.cpp
Углубленный_C_C++/Homework_1/: main.c  readme.md
Углубленный_C_C++/Homework_1/tests/: CMakeLists.txt  test_funcs.cpp
Углубленный_C_C++/Master_class_1/c_infrastructure-main/12/: a.out  test.c
Углубленный_C_C++/Master_class_1/c_infrastructure-main/9/fib_lib/: CMakeLists.txt
Углубленный_C_C++/Master_class_1/c_infrastructure-main/9/tests/: CMakeLists.txt
